--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         </section>
         
         <section class="items" id="personnages">
-            <h2>pigjsrg</h2>
-            <div class="bandeau">
-                <p>Timothée Chalamet: Paul Atreïdes
+            <h2 id="titreP">Characters</h2>
+            <div class="bandeauC">
+                <p id="tPerso">Timothée Chalamet: Paul Atreïdes
                     Rebecca Ferguson: Lady Jessica
                     Oscar Isaac: Duke Leto Atreïdes
                     Jason Momoa: Duncan Idaho
@@ -60,19 +60,10 @@
                     Stellan Skarsgard: Baron Harkonnen
                     Dave Bautista: Rabban Harkonnen</p>
             </div>
-
-            <div>
-                <span><</span>
-                <span>></span>
-            </div>
         </section>
         
         <section class="items" id="images">
             <h2>Les personnages</h2>
-            <div>
-                <span><</span>
-                <span>></span>
-            </div>
             <!-- <div class="carousel">
                     <img src="medias/images/dune-timothee-chalamet-rebecca-ferguson.jpeg" alt="">
                     <img src="medias/images/Dune03.webp" alt="">   
