slide show working

--- a/index.html
+++ b/index.html
@@ -50,74 +50,42 @@
                 <div class="diapo" id="containerD">
                     <div class="elements">
                         <div class="element active">
-                            <img src="medias/characters/chani.jpg" alt="image 1">
+                            <img src="medias/characters/paul_atreides.jpg" alt="image 1">
                         </div>
                         <div class="element">
-                            <img src="medias/characters/dr_wellington_yueh.jpg" alt="image 2">
+                            <img src="medias/characters/lady_jessica.jpg" alt="image 2">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 3">
+                            <img src="medias/characters/duke_leto_atreides.jpg" alt="image 3">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 4">
+                            <img src="medias/characters/duncan_idaho.jpg" alt="image 4">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 5">
+                            <img src="medias/characters/gurney_halleck.jpg" alt="image 5">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 6">
+                            <img src="medias/characters/dr_wellington_yueh.jpg" alt="image 6">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 7">
+                            <img src="medias/characters/chani.jpg" alt="image 7">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 8">
+                            <img src="medias/characters/stilgar.jpg" alt="image 8">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 9">
+                            <img src="medias/characters/liet_kynes.jpg" alt="image 9">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 10">
+                            <img src="medias/characters/baron_harkonnen.jpg" alt="image 10">
                         </div>
                         <div class="element">
-                            <img src="medias/images/10.jpg" alt="image 11">
+                            <img src="medias/characters/rabban_harkonnen.jpg" alt="image 11">
                         </div>
                     </div>
                 </div>
-            <div class="bandeauC">
-                <div class="caption">
-                    <p>Timothée Chalamet: Paul Atreïdes</p>
-                </div>
-                <div class="caption">
-                    <p>Rebecca Ferguson: Lady Jessica</p>
-                </div>
-                <div class="caption">
-                    <p>Oscar Isaac: Duke Leto Atreïdes</p>
-                </div>
-                <div class="caption">
-                    <p>Jason Momoa: Duncan Idaho</p>
-                </div>
-                <div class="caption">
-                    <p>Josh Brolin: Gurney Halleck</p>
-                </div>
-                <div class="caption">
-                    <p>Chang Chen: Dr. Wellington Yueh</p>
-                </div>
-                <div class="caption">
-                    <p>Zendaya: Chani</p>
-                </div>
-                <div class="caption">
-                    <p>Javier Bardem: Stilgar</p>
-                </div>
-                <div class="caption">
-                    <p>Sharon Duncan-Brewster: Liet Kynes</p>
-                </div>
-                <div class="caption">
-                    <p>Stellan Skarsgard: Baron Harkonnen</p>
-                </div>
-                <div class="caption">
-                    <p>Dave Bautista: Rabban Harkonnen</p>
-                </div>
+            <div class="bandeauC" id="containerT">
+                <p id="caption">Timothée Chalamet: Paul Atreïdes</p>
             </div>    
             <span id="nav-gauche" class="chevron left"></span>
             <span id="nav-droite" class="chevron right"></span> 
@@ -125,13 +93,48 @@
         </section>
         
         <section class="items" id="images">
-            <h2>Les personnages</h2>
-            <!-- <div class="carousel">
-                    <img src="medias/images/dune-timothee-chalamet-rebecca-ferguson.jpeg" alt="">
-                    <img src="medias/images/Dune03.webp" alt="">   
-                    <img src="medias/images/07.jpg" alt="">
-                    <img src="medias/images/dune-jason-momoa.jpg" alt="">  
-            </div> -->
+            <h2 id="titreV">Videos & IMAGES</h2>
+            <div class="bandeauV">
+                <div class="diapo" id="containerV">
+                    <div class="elements">
+                        <div class="element active">
+                            <img src="medias/characters/paul_atreides.jpg" alt="image 1">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/lady_jessica.jpg" alt="image 2">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/duke_leto_atreides.jpg" alt="image 3">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/duncan_idaho.jpg" alt="image 4">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/gurney_halleck.jpg" alt="image 5">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/dr_wellington_yueh.jpg" alt="image 6">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/chani.jpg" alt="image 7">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/stilgar.jpg" alt="image 8">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/liet_kynes.jpg" alt="image 9">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/baron_harkonnen.jpg" alt="image 10">
+                        </div>
+                        <div class="element">
+                            <img src="medias/characters/rabban_harkonnen.jpg" alt="image 11">
+                        </div>
+                    </div>
+                </div>
+                <span id="nav-gauche" class="chevron leftV"></span>
+                <span id="nav-droite" class="chevron rightV"></span> 
+            </div>
         </section>
         
         <section class="items" id="map">
