--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     </header>
 
     <main class="container">
+        
         <section class="items" id="accueil">
-            <h1>ONLY IN CINEMAS</h1>
-            <div id="test">
+            <div>
                 <div id="video"></div>
             </div>
+            <h1 id="titreA">ONLY IN CINEMAS</h1>
         </section>
 
         <section class="items" id="apropos">
@@ -156,7 +157,9 @@
                 <img src="medias/characters/duncan_idaho.jpg" alt="">
                 <img src="medias/characters/dune-oscar-isaac.jpg" alt="">
             </article>
-            <article id="fiche">efgkjfhegfgsegfi</article>
+            <article id="fiche">
+                <p>rljshgh s</p>
+            </article>
         </section>
     </main>
     <footer>
